--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,14 @@
     <string name="spider_man">Spider-Man</string>
     <string name="superman">Superman</string>
     <string name="wonder_woman">Wonder Woman</string>
+
+    <string name="card_fighter">Card of a fighter</string>
+    <string name="board_game">Picture of the bord game</string>
+    <string name="you">(You)</string>
+
+    <string name="zero_value">0</string>
+    <string name="max_victory_points"> / 20</string>
+    <string name="max_life"> / 10</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
