--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,8 +26,11 @@
     <string name="you">(You)</string>
 
     <string name="zero_value">0</string>
-    <string name="max_victory_points"> / 20</string>
-    <string name="max_life"> / 10</string>
+    <string name="max_victory_points">%d / 20</string>
+    <string name="max_life">%d / 10</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="stamina_logo">Stamina Logo</string>
+    <string name="life_logo">Life logo</string>
+    <string name="victory_logo">Victory logo</string>
 </resources>
