--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="wonder_woman">Wonder Woman</string>
     <string name="play">Play</string>
     <string name="content_description_home_image">Background of the application</string>
+    <string name="rules">Rules</string>
 </resources>
