--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,5 @@
     <string name="victory_logo">Victory logo</string>
     <string name="play">Play</string>
     <string name="content_description_home_image">Background of the application</string>
-
+    <string name="rules">Rules</string>
 </resources>
