[COMMON] add keys for select_fighter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,6 @@
     <string name="play">Play</string>
     <string name="content_description_home_image">Background of the application</string>
     <string name="rules">Rules</string>
+    <string name="choose_your_hero">Choose your hero</string>
+    <string name="choose">Choose</string>
 </resources>
