[Refacto] Refacto select fighter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,6 @@
     <string name="win_string">You are the king of Hereos ! </string>
     <string name="lose_string">You lost ! </string>
     <string name="replay">Replay</string>
+    <string name="character_selector_left_button">Character selector left button</string>
+    <string name="character_selector_right_button">Character selector right button</string>
 </resources>
