[BoardFragment] Link board view model with board fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="rules">Rules</string>
     <string name="choose_your_hero">Choose your hero</string>
     <string name="choose">Choose</string>
+    <string name="user_display_name_format">%s%s</string>
 
     <string name="win_string">You are the king of Hereos ! </string>
     <string name="lose_string">You lost ! </string>
