[SHOP] Create the shop fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="wonder_woman">Wonder Woman</string>
 
     <string name="img_desc_card_fighter">Card of a fighter</string>
+    <string name="img_desc_card_power">Card of a power</string>
     <string name="img_desc_board_game">Picture of the bord game</string>
     <string name="img_desc_background">Background of the screen</string>
     <string name="img_desc_Dice">Picture of the dice</string>
@@ -34,6 +35,7 @@
 
     <string name="btn_throw">THROW</string>
     <string name="btn_validate">VALIDATE</string>
+    <string name="btn_pass">PASS</string>
 
     <string name="stamina_logo">Stamina Logo</string>
     <string name="life_logo">Life logo</string>
@@ -53,4 +55,5 @@
     <string name="background_image">Background image</string>
     <string name="rules_url">https://www.regledujeu.fr/king-of-tokyo/</string>
     <string name="image_of_the_winner">Image of the winner</string>
+    <string name="shop_buy">Buy an attack?</string>
 </resources>
