[SHOP] integrate shop in the game (view and viewmodel)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="btn_throw">THROW</string>
     <string name="btn_validate">VALIDATE</string>
     <string name="btn_pass">PASS</string>
+    <string name="btn_buy">BUY</string>
 
     <string name="stamina_logo">Stamina Logo</string>
     <string name="life_logo">Life logo</string>
